LPS-186560 Fix on some resolutions form fields panel covers some parts of the page, for example the tree dots actions

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/css/_portlet-forms-admin.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/css/_portlet-forms-admin.scss
@@ -33,7 +33,7 @@
 
 	&--sidebar-open {
 		padding-left: 0;
-		padding-right: 338px;
+		padding-right: 408px;
 	}
 }
 
