--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/css/_portlet-forms.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/css/_portlet-forms.scss
@@ -8,7 +8,7 @@
 
 		&--sidebar-open {
 			padding-left: 0;
-			padding-right: 338px;
+			padding-right: 408px;
 		}
 	}
 }
